// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<div
  className="radio"
  id={undefined}
  style={undefined}
>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={false}
      id="_teatime1"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="aa"
    />
    <label
      className="control"
      htmlFor="_teatime1"
    />
    <label
      className="label"
      htmlFor="_teatime1"
    >
      AA
    </label>
  </span>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={false}
      id="_teatime2"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="bb"
    />
    <label
      className="control"
      htmlFor="_teatime2"
    />
    <label
      className="label"
      htmlFor="_teatime2"
    >
      BB
    </label>
  </span>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={false}
      id="_teatime3"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="cc"
    />
    <label
      className="control"
      htmlFor="_teatime3"
    />
    <label
      className="label"
      htmlFor="_teatime3"
    >
      CC
    </label>
  </span>
</div>
`;

exports[`Renders correctly with defined props 1`] = `
<div
  className="radio outer"
  id="controls-id"
  style={undefined}
>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={true}
      id="_teatime4"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="aa"
    />
    <label
      className="control"
      htmlFor="_teatime4"
    >
      AA
    </label>
    <label
      className="label"
      htmlFor="_teatime4"
    />
  </span>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={true}
      id="_teatime5"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="bb"
    />
    <label
      className="control"
      htmlFor="_teatime5"
    >
      BB
    </label>
    <label
      className="label"
      htmlFor="_teatime5"
    />
  </span>
  <span
    className="box"
    style={undefined}
  >
    <input
      checked={false}
      className="native"
      defaultChecked={undefined}
      disabled={true}
      id="_teatime6"
      name="control"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      type="radio"
      value="cc"
    />
    <label
      className="control"
      htmlFor="_teatime6"
    >
      CC
    </label>
    <label
      className="label"
      htmlFor="_teatime6"
    />
  </span>
</div>
`;
